--- a/app/src/main/res/layout/fragment_video_player.xml
+++ b/app/src/main/res/layout/fragment_video_player.xml
@@ -1,24 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".VideoPlayerFragment">
 
-    <Button
-        android:id="@+id/test_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="getTimestamp()" />
-
-    <androidx.media3.ui.PlayerView
-        android:id="@+id/player_view"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:show_buffering="when_playing"
-        app:show_shuffle_button="true">
+        android:layout_height="match_parent">
 
-    </androidx.media3.ui.PlayerView>
+        <androidx.media3.ui.PlayerView
+            android:id="@+id/player_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:auto_show="true"
+            app:show_buffering="when_playing"
+            app:show_shuffle_button="true">
+
+        </androidx.media3.ui.PlayerView>
+
+        <com.google.android.material.slider.Slider
+            android:id="@+id/volumeSlider"
+            android:layout_width="108dp"
+            android:layout_height="44dp"
+            android:layout_marginLeft="90dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginBottom="5dp"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:stepSize="1.0"
+            android:value="100.0"
+            android:valueFrom="0.0"
+            android:valueTo="100.0"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:tickVisible="false" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
