--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="edu.cuhk.csci3310.mediaplayer.ui.home.HomeFragment"
+        android:name="edu.cuhk.csci3310.mediaplayer.ui.Audio.AudioFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="edu.cuhk.csci3310.mediaplayer.ui.dashboard.DashboardFragment"
+        android:name="edu.cuhk.csci3310.mediaplayer.ui.Video.VideoFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
