--- a/app/src/main/res/layout/media_item.xml
+++ b/app/src/main/res/layout/media_item.xml
@@ -24,7 +24,7 @@
 
         <TextView
             android:id="@+id/media_title"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="30dp"
             android:textSize="20dp"
             android:textColor="@color/black"
