--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F100AD"
-    tools:context=".ui.audio.MusicPlayerActivity">
+    tools:context=".ui.Audio.MusicPlayerActivity">
 
     <TextView
         android:layout_width="match_parent"
