--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/navigation_songs"
-        android:name="edu.cuhk.csci3310.mediaplayer.ui.audio.AudioFragment"
+        android:name="edu.cuhk.csci3310.mediaplayer.ui.Audio.AudioFragment"
         android:label="@string/title_songs"
         tools:layout="@layout/fragment_audio" />
 
