--- a/app/src/main/res/layout/fragment_audio.xml
+++ b/app/src/main/res/layout/fragment_audio.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.Audio.AudioFragment">
 
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/audio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
