--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.Video.VideoFragment">
 
     <TextView
-        android:id="@+id/text_dashboard"
+        android:id="@+id/video"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
