--- a/app/src/main/res/layout/media_item.xml
+++ b/app/src/main/res/layout/media_item.xml
@@ -13,8 +13,8 @@
         android:id="@+id/imageTitle"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginRight="10dp"
-        android:contentDescription="audio_image"
+        android:layout_marginEnd="10dp"
+        android:contentDescription="@string/audio_image"
         />
 
     <LinearLayout
@@ -26,19 +26,19 @@
             android:id="@+id/media_title"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginBottom="20dp"
-            android:text="Media Title"/>
+            android:text="@string/media_title"/>
 
         <TextView
             android:id="@+id/media_length"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:text="00:00"/>
+            android:layout_marginStart="8dp"
+            android:text="@string/_00_00"/>
     </LinearLayout>
 
 </LinearLayout>
